--- a/css/adventure.css
+++ b/css/adventure.css
@@ -52,6 +52,50 @@ body {
   border-radius: 8px;
 }
 
+.dayOfDate {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  padding: 50px;
+}
+
+#selected-date {
+  margin: 30px;
+}
+
+#ticket {
+  border: 2px solid #000;
+  padding: 20px;
+  margin-top: 20px;
+  display: none;
+  width: 300px;
+  margin: 0 auto;
+}
+
+#ticket h2 {
+  margin: 10px 0;
+}
+
+#ticket img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+#ticket p {
+  margin: 5px 0;
+}
+
+button {
+  margin-top: 15px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
 @media (max-width: 768px){
   .info {
     flex-direction: column;
